--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ android:
   components:
     - android-22
     - build-tools-21.1.2
-    - extra-android-support
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-19
