--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,19 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    signingConfigs {
+        release {
+            storeFile file("../keystore/mytest.keystore")
+            storePassword System.console().readLine("\nKeystore password: ")
+            keyAlias System.console().readLine("\nKey alias: ")
+            keyPassword System.console().readLine("\nKey password: ")
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
