add task script

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
     }
 }
 
+task buildAndOtaRelease(dependsOn: ['build', 'crashlyticsUploadDistributionRelease'])
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
